[gd_scene load_steps=33 format=3 uid="uid://bwbx1bsp2654p"]

[ext_resource type="Script" path="res://scripts/score_screen.gd" id="1_32ew4"]
[ext_resource type="Texture2D" uid="uid://7rh5xasj6x8t" path="res://assets/gamesprites/background/summer_background_full.png" id="2_2ufbj"]
[ext_resource type="Script" path="res://scripts/destroy_at_runtime.gd" id="3_gkcic"]
[ext_resource type="Script" path="res://scripts/score_board.gd" id="4_rf42k"]
[ext_resource type="Texture2D" uid="uid://bqg03xxd5wu7c" path="res://assets/ui/textbox/panel_brown_corners_a.svg" id="5_vf2f8"]
[ext_resource type="Texture2D" uid="uid://cny56rgx7yngj" path="res://assets/ui/textbox/panel_grey_bolts_dark.svg" id="6_hwytm"]
[ext_resource type="FontFile" uid="uid://mop3gahfptvb" path="res://fonts/monogram-extended.ttf" id="7_phboc"]
[ext_resource type="Texture2D" uid="uid://dw3mlo07r7rc3" path="res://assets/ui/textbox/panel_brown_dark.svg" id="8_h1kr6"]
[ext_resource type="Theme" uid="uid://cc4xqkjslk0ic" path="res://resources/monogram_ui_theme.tres" id="9_wlbxn"]
[ext_resource type="Texture2D" uid="uid://o7boexverfbj" path="res://assets/ui/textbox/banner_classic_curtain.svg" id="10_co8hg"]
[ext_resource type="PackedScene" uid="uid://dqmx8d6kghpgq" path="res://scenes/modular_touch_button.tscn" id="11_rebsr"]
[ext_resource type="Shader" path="res://shaders/change2color.gdshader" id="12_kh7dl"]
[ext_resource type="Theme" uid="uid://dxv3iupkms0px" path="res://resources/monogram_window_theme.tres" id="13_yi8ft"]
[ext_resource type="PackedScene" uid="uid://bvjj3rrg8df6l" path="res://scenes/inside_dialog.tscn" id="14_sei35"]
[ext_resource type="PackedScene" uid="uid://esd47xrpmopf" path="res://scenes/inside_tos_privacy.tscn" id="14_tg3mq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_og7rk"]
atlas = ExtResource("2_2ufbj")
region = Rect2(734.039, 0, 605.701, 1296)

[sub_resource type="LabelSettings" id="LabelSettings_0baed"]
font = ExtResource("7_phboc")
font_size = 70
outline_size = 15
outline_color = Color(0.3432, 0.44044, 0.52, 1)

[sub_resource type="LabelSettings" id="LabelSettings_abc66"]
font = ExtResource("7_phboc")
font_size = 95
outline_size = 20
outline_color = Color(0.3432, 0.44044, 0.52, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k4lms"]
font = ExtResource("7_phboc")
font_size = 65
font_color = Color(0.5275, 1, 0.37, 1)
outline_size = 20
outline_color = Color(0.3432, 0.44044, 0.52, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0g01r"]
font = ExtResource("7_phboc")
font_size = 95
outline_size = 20
outline_color = Color(0.57, 0.39368, 0.2052, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gspd6"]
font = ExtResource("7_phboc")
font_size = 85
outline_size = 20
outline_color = Color(0.57, 0.39368, 0.2052, 1)

[sub_resource type="LabelSettings" id="LabelSettings_16roo"]
font = ExtResource("7_phboc")
font_size = 160
outline_size = 20
outline_color = Color(0.89, 0.335233, 0.2848, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oxmnt"]
shader = ExtResource("12_kh7dl")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.705882, 0.482353, 0.254902, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.427451, 0.294118, 0.152941, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_08wxu"]

[sub_resource type="MeshTexture" id="MeshTexture_1r63h"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_yr1iw"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pg3l3"]
shader = ExtResource("12_kh7dl")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.705882, 0.482353, 0.254902, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.427451, 0.294118, 0.152941, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="MeshTexture" id="MeshTexture_84wei"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_b7epj"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r5iud"]
shader = ExtResource("12_kh7dl")
shader_parameter/u_color_key1 = Color(1, 1, 1, 1)
shader_parameter/u_replacement_color1 = Color(0.705882, 0.482353, 0.254902, 1)
shader_parameter/u_color_key2 = Color(0.764706, 0.764706, 0.764706, 1)
shader_parameter/u_replacement_color2 = Color(0.427451, 0.294118, 0.152941, 1)
shader_parameter/u_tolerance = 0.1
shader_parameter/u_interpolation_factor = 1.0

[sub_resource type="MeshTexture" id="MeshTexture_pjafx"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[sub_resource type="MeshTexture" id="MeshTexture_55x3g"]
mesh = SubResource("PlaceholderMesh_08wxu")
image_size = Vector2(60, 17)

[node name="ScoreScreen" type="Node2D"]
texture_filter = 1
script = ExtResource("1_32ew4")
maingameplay_scene_path = "res://scenes/main_gameplay_scene.tscn"
maingameplay_song_path = "res://assets/musics/Upbeat Forever.mp3"
mainmenu_scene_path = "res://scenes/main_menu.tscn"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(540, 1204)
scale = Vector2(1.87, 1.87)
texture = SubResource("AtlasTexture_og7rk")

[node name="NotchReminder" type="CanvasLayer" parent="."]
script = ExtResource("3_gkcic")

[node name="NotchRect" type="ReferenceRect" parent="NotchReminder"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2
border_width = 2.0
metadata/_edit_lock_ = true

[node name="ScoreCanvas" type="CanvasLayer" parent="."]

[node name="ScoreBoard" type="Control" parent="ScoreCanvas"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_rf42k")
metadata/_edit_use_anchors_ = true

[node name="BoardRect" type="NinePatchRect" parent="ScoreCanvas/ScoreBoard"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.496667
anchor_right = 0.5
anchor_bottom = 0.496667
offset_left = -484.0
offset_top = -832.0
offset_right = 484.0
offset_bottom = 832.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_vf2f8")
region_rect = Rect2(0, 0, 320, 320)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="YourScoreRect" type="NinePatchRect" parent="ScoreCanvas/ScoreBoard/BoardRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -415.0
offset_top = 78.0
offset_right = 416.0
offset_bottom = 564.0
grow_horizontal = 2
texture = ExtResource("6_hwytm")
region_rect = Rect2(0, 0, 320, 320)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VarmintsScore" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.00986199
anchor_right = 0.5
anchor_bottom = 0.00986199
offset_left = -266.5
offset_top = 84.0
offset_right = 267.5
offset_bottom = 160.0
grow_horizontal = 2
text = "Varmints knocked: 0"
label_settings = SubResource("LabelSettings_0baed")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CorncobsScore" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.00986199
anchor_right = 0.5
anchor_bottom = 0.00986199
offset_left = -288.5
offset_top = 137.0
offset_right = 289.5
offset_bottom = 213.0
grow_horizontal = 2
text = "Corn cobs collected	: 0"
label_settings = SubResource("LabelSettings_0baed")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FinalScore" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -254.001
offset_right = 232.0
offset_bottom = -178.001
grow_horizontal = 2
grow_vertical = 0
text = "Your Score: 0"
label_settings = SubResource("LabelSettings_abc66")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -231.0
offset_top = -169.001
offset_right = 232.0
offset_bottom = -93.0009
grow_horizontal = 2
grow_vertical = 0
text = "High Score	: 0"
label_settings = SubResource("LabelSettings_abc66")
horizontal_alignment = 1

[node name="NewHighscore" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect/HighScore"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -26.5
offset_right = -8.5
offset_bottom = 26.5
grow_vertical = 2
text = "New!"
label_settings = SubResource("LabelSettings_k4lms")
horizontal_alignment = 1

[node name="YourScoreRect2" type="NinePatchRect" parent="ScoreCanvas/ScoreBoard/BoardRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.0
offset_top = -234.5
offset_right = 416.0
offset_bottom = 740.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_h1kr6")
region_rect = Rect2(0, 0, 320, 320)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Label" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -231.5
offset_top = 42.0
offset_right = 231.5
offset_bottom = 118.0
grow_horizontal = 2
text = "Global Leaderboard"
label_settings = SubResource("LabelSettings_0g01r")
horizontal_alignment = 1

[node name="Notice" type="Label" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect2"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -366.5
offset_top = 305.499
offset_right = 366.5
offset_bottom = 697.499
grow_horizontal = 2
text = "(Sorry, either you are offline or the leaderboard backend hasn't been configured yet.)"
label_settings = SubResource("LabelSettings_gspd6")
horizontal_alignment = 1
autowrap_mode = 3

[node name="ScoreNames" type="RichTextLabel" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 134.0
offset_right = -315.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_wlbxn")
text = "1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
1. XXXXXXXXX
10. XXXXXXXXX"
scroll_active = false
autowrap_mode = 0

[node name="NameScores" type="RichTextLabel" parent="ScoreCanvas/ScoreBoard/BoardRect/YourScoreRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 559.0
offset_top = 134.0
offset_right = -69.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_wlbxn")
text = "9999"
scroll_active = false

[node name="ScoreCanvasModulate" type="CanvasModulate" parent="ScoreCanvas"]
unique_name_in_owner = true
visible = false
color = Color(0.62, 0.62, 0.62, 1)

[node name="GameOverBanner" type="Sprite2D" parent="."]
position = Vector2(540, 247)
texture = ExtResource("10_co8hg")

[node name="Label" type="Label" parent="GameOverBanner"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -731.0
offset_top = -195.0
offset_right = -191.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_16roo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnSubmitScore" parent="." instance=ExtResource("11_rebsr")]
material = SubResource("ShaderMaterial_oxmnt")
position = Vector2(57, 2044)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_1r63h")
texture_pressed = SubResource("MeshTexture_yr1iw")
button_text = "Submit Score"
button_size = Vector2(136.595, 17.99)
font_color = Color(1, 1, 1, 1)

[node name="BtnPlayAgain" parent="." instance=ExtResource("11_rebsr")]
material = SubResource("ShaderMaterial_pg3l3")
position = Vector2(57, 2194)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_84wei")
texture_pressed = SubResource("MeshTexture_b7epj")
button_text = "Play Again"
button_size = Vector2(68.308, 17.99)
font_color = Color(1, 1, 1, 1)

[node name="BtnMainMenu" parent="." instance=ExtResource("11_rebsr")]
material = SubResource("ShaderMaterial_r5iud")
position = Vector2(565, 2194)
scale = Vector2(7, 7)
texture_normal = SubResource("MeshTexture_pjafx")
texture_pressed = SubResource("MeshTexture_55x3g")
button_text = "Main Menu"
button_size = Vector2(63.925, 17.99)
font_color = Color(1, 1, 1, 1)

[node name="AcceptTOSPrivacy" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
disable_3d = true
title = ""
initial_position = 1
size = Vector2i(995, 1200)
max_size = Vector2i(995, 1200)
theme = ExtResource("13_yi8ft")
ok_button_text = "I agree"
cancel_button_text = "I disagree"

[node name="InsideTOSPrivacy" parent="AcceptTOSPrivacy" instance=ExtResource("14_tg3mq")]
offset_left = -473.5
offset_top = -576.0
offset_right = 473.5
offset_bottom = 455.0

[node name="InsertName" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
disable_3d = true
title = ""
initial_position = 1
size = Vector2i(995, 400)
max_size = Vector2i(995, 800)
theme = ExtResource("13_yi8ft")

[node name="InsideDialog" parent="InsertName" instance=ExtResource("14_sei35")]
unique_name_in_owner = true
offset_left = -473.5
offset_top = -176.0
offset_right = 473.5
offset_bottom = 55.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
unique_name_in_owner = true
visible = false
color = Color(0.62, 0.62, 0.62, 1)

[connection signal="precise_released" from="BtnSubmitScore" to="." method="_on_btn_submit_score_precise_released"]
[connection signal="precise_released" from="BtnPlayAgain" to="." method="_on_btn_play_again_precise_released"]
[connection signal="precise_released" from="BtnMainMenu" to="." method="_on_btn_main_menu_precise_released"]
[connection signal="canceled" from="AcceptTOSPrivacy" to="." method="_on_accept_tos_privacy_canceled"]
[connection signal="confirmed" from="AcceptTOSPrivacy" to="." method="_on_accept_tos_privacy_confirmed"]
[connection signal="canceled" from="InsertName" to="." method="_on_insert_name_canceled"]
[connection signal="confirmed" from="InsertName" to="." method="_on_insert_name_confirmed"]
